--- a/q6.html
+++ b/q6.html
@@ -19,8 +19,11 @@
 			{
 			  Question = cookiearray[i].split('=')[0];
 			  Answer = cookiearray[i].split('=')[1];
-			  document.write ("The question was : " + Question + " and answer is : " + Answer);
-			}	
+			  var answer+""+i = Answer;
+			}
+		
+			 document.write ("Antwoord op de eerste vraag:" + answer0 + " Antwoord op de tweede vraag:" + answer1 + 
+							 " Antwoord op de derde vraag:" +answer2 + " Antwoord op de vierde vraag:" +answer3 + " Antwoord op de vijfde vraag:" +answer4 );
 
 			 function ShowCookie() {
   			 alert(document.cookie);
