--- a/q6.html
+++ b/q6.html
@@ -13,23 +13,20 @@
 			
 	<script type = "text/javascript">
         
-           var AllAnswers = document.cookie;
-			 cookiearray = AllAnswers.split(';');
-			 for(var i=0; i<cookiearray.length; i++) 
-			{
-			  Question = cookiearray[i].split('=')[0];
-			  Answer = cookiearray[i].split('=')[1];
-			  var answer+""+i = Answer;
-			}
-		
-			 document.write ("Antwoord op de eerste vraag:" + answer0 + " Antwoord op de tweede vraag:" + answer1 + 
-							 " Antwoord op de derde vraag:" +answer2 + " Antwoord op de vierde vraag:" +answer3 + " Antwoord op de vijfde vraag:" +answer4 );
-
+				var AllAnswers = document.cookie;
+				cookiearray = AllAnswers.split(';');
+				for(var i=0; i<cookiearray.length; i++) 
+				{
+				  Question = cookiearray[i].split('=')[0];
+				  Answer = cookiearray[i].split('=')[1];
+				  document.write ("The question was : " + Question + " and answer is : " + Answer);
+				}
 			 function ShowCookie() {
   			 alert(document.cookie);
-			 }
+			 }			
 			 
       	</script>   
+	
 	
 </h1>
 	
