--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
   <img src="images/__yellow.png" width="300" height="225">
 </label>
 
+<h1>Creatief&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Beschouwend&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Positief</h1>	
+	
 <label>
   <input type="radio" name="hats" value="red" checked>
   <img src="images/__red.png" width="300" height="225">
@@ -56,9 +58,10 @@
   <img src="images/__black.png" width="300" height="225">
 </label>
 	
+<h1>Op gevoel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Feitelijk&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Negatief</h1>	
+	
 <div>
 <button type="button" onclick="WriteCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
-<button type="button" onclick="ShowCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
 </div>
 
 </form>
