--- a/q3.html
+++ b/q3.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<h1>Wat voor dag heb je vandaag?</h1>
+<h1>Heb je vandaag een goede dag?</h1>
 	
 <form action="q4.html" name = "quiz">
 
@@ -38,7 +38,7 @@
 	
 <div>
 <button type="button" onclick="WriteCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
-<button type="button" onclick="ShowCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
+<a href="q2.html"><img src="images/prev.png" width="400" height="150" alt=""></a>
 </div>
 
 </form>
