--- a/q4.html
+++ b/q4.html
@@ -27,32 +27,34 @@
 <form action="q5.html" name = "quiz">
 
 <label>
-  <input type="radio" name="daycolor" value="grass" checked>
+  <input type="radio" name="daycolor" value="Warm Grasgroen" checked>
   <img src="images/__gras.png" width="350" height="350">
 </label>
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <label>
-  <input type="radio" name="daycolor" value="king" checked>
+  <input type="radio" name="daycolor" value="Helder Koningsblauw" checked>
   <img src="images/__koninglijk.png" width="350" height="350">
 </label>
 	
+<h3>&nbsp;&nbsp;&nbsp;Warm Grasgroen &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Helder Koningsblauw</h3>
+	
 <label>
-  <input type="radio" name="daycolor" value="sun" checked>
+  <input type="radio" name="daycolor" value="Stralend Goudgeel" checked>
   <img src="images/__zonnig.png" width="350" height="350">
 </label>
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <label>
-  <input type="radio" name="daycolor" value="fire" checked>
+  <input type="radio" name="daycolor" value="Vurig Oranje" checked>
   <img src="images/__vurig.png" width="350" height="350">
 </label>	
 	
+<h3>Stralend Goudgeel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Vurig Oranje</h3>
+	
 <div>
 <button type="button" onclick="WriteCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
-<button type="button" onclick="ShowCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
+<a href="q3.html"><img src="images/prev.png" width="400" height="150" alt=""></a>
 </div>
 
 </form>
-<img src="images/__nee.png" width="300" height="300">
-
 </body>
 </html>
