--- a/q5.html
+++ b/q5.html
@@ -27,60 +27,62 @@
 <form action="q6.html" name = "quiz">
 
 <label>
-  <input type="radio" name="challenges" value="1" checked>
+  <input type="radio" name="challenges" value="Open, Toegankelijk, Eerlijk" checked>
   <img src="images/__open-toegankelijk-eerlijk.png" width="160" height="125">
 </label>
 	
 <label>
-  <input type="radio" name="challenges" value="2" checked>
+  <input type="radio" name="challenges" value="Bij jezelf blijven, Reflecteren" checked>
   <img src="images/__bijjezelfblijven-reflecteren.png" width="160" height="125">
 </label>
 
 <label>
-  <input type="radio" name="challenges" value="3" checked>
+  <input type="radio" name="challenges" value="Oordeelloos, Empathisch" checked>
   <img src="images/__oordeelloos-empatisch-respectvol.png" width="160" height="125">
 </label>
 	
 <label>
-  <input type="radio" name="challenges" value="4" checked>
+  <input type="radio" name="challenges" value="Bewust van anderen" checked>
   <img src="images/__bewust-wakker.png" width="160" height="125">
 </label>
 
 <label>
-  <input type="radio" name="challenges" value="5" checked>
+  <input type="radio" name="challenges" value="Overgave, Bescheiden, Bereidwillig" checked>
   <img src="images/__overgave-bescheiden.png" width="160" height="125">
 </label>
 	
+	<h4>&nbsp;&nbsp;&nbsp;Open, Toegankelijk, Eerlijk&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bij jezelf blijven, Reflecteren &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;Oordeelloos, Empathisch&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bewust van anderen&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Overgave, Bescheiden, Bereidwillig</h4>
+	
 <label>
-  <input type="radio" name="challenges" value="6" checked>
+  <input type="radio" name="challenges" value="Nieuwe dingen proberen" checked>
   <img src="images/__nieuwedingenproberen-moedig.png" width="160" height="125">
 </label>
 	
 <label>
-  <input type="radio" name="challenges" value="7" checked>
+  <input type="radio" name="challenges" value="Leergierig, Flexibel, Geduldig" checked>
   <img src="images/__leergierig-flexibel-geduldig.png" width="160" height="125">
 </label>
 	
 <label>
-  <input type="radio" name="challenges" value="8" checked>
+  <input type="radio" name="challenges" value="Efficiënt, Geördend" checked>
   <img src="images/__efficient-structuur-geordend.png" width="160" height="125">
 </label>
 
 <label>
-  <input type="radio" name="challenges" value="9" checked>
+  <input type="radio" name="challenges" value="Betrokken, Verbindend" checked>
   <img src="images/__betrokken-verbindend-hulpvaardig.png" width="160" height="125">
 </label>
 
 <label>
-  <input type="radio" name="challenges" value="10" checked>
+  <input type="radio" name="challenges" value="Autonoom, Zichtbaar zijn" checked>
   <img src="images/__autonoom-zichtbaar.png" width="160" height="125">
 </label>
 
-
+	<h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nieuwe dingen proberen&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Leergierig, Flexibel, Geduldig &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Efficiënt, Geördend&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Betrokken, Verbindend&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Autonoom, Zichtbaar zijn</h4>
 	
 <div>
 <button type="button" onclick="WriteCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
-<button type="button" onclick="ShowCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
+<a href="q4.html"><img src="images/prev.png" width="400" height="150" alt=""></a>
 </div>
 
 </form>
