--- a/q2.html
+++ b/q2.html
@@ -27,34 +27,36 @@
 <form action="q3.html" name = "quiz">
 
 <label>
-  <input type="radio" name="archetypes" value="1" checked>
+  <input type="radio" name="archetypes" value="Grapjas" checked>
   <img src="images/__grapjas.png" width="125" height="150">
 </label>
 
 <label>
-  <input type="radio" name="archetypes" value="2" checked>
+  <input type="radio" name="archetypes" value="Held" checked>
   <img src="images/__held.png" width="125" height="150">
 </label>
 
 <label>
-  <input type="radio" name="archetypes" value="3" checked>
+  <input type="radio" name="archetypes" value="Kind" checked>
   <img src="images/__kind.png" width="125" height="150">
 </label>
 
 <label>
-  <input type="radio" name="archetypes" value="4" checked>
+  <input type="radio" name="archetypes" value="Koning" checked>
   <img src="images/__koning.png" width="125" height="150">
 </label>
 
 <label>
-  <input type="radio" name="archetypes" value="5" checked>
+  <input type="radio" name="archetypes" value="Liefhebber" checked>
   <img src="images/__liefhebber.png" width="125" height="150">
 </label>
 
 <label>
-  <input type="radio" name="archetypes" value="6" checked>
+  <input type="radio" name="archetypes" value="Schepper" checked>
   <img src="images/__schepper.png" width="125" height="150">
 </label>
+	
+<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Grapjas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Held&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kind&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Koning(in)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Liefhebber&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Schepper</h2>
 		
 <label>
   <input type="radio" name="archetypes" value="7" checked>
@@ -86,9 +88,11 @@
   <img src="images/__avonturier.png" width="125" height="150">
 </label>
 	
+<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tovenaar&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Verzorger&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Provocateur&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Wijze&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alleman&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Avonturier</h2>
+	
 <div>
 <button type="button" onclick="WriteCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
-<button type="button" onclick="ShowCookie()"><img src="images/next.png" width="400" height="150" alt=""/></button>
+<a href="index.html"><img src="images/prev.png" width="400" height="150" alt=""></a>
 </div>
 
 </form>
