--- a/q6.html
+++ b/q6.html
@@ -19,7 +19,7 @@
 				{
 				  Question = cookiearray[i].split('=')[0];
 				  Answer = cookiearray[i].split('=')[1];
-				  document.write ("Op deze vraag : " + Question + " gaf je dit antwoord : " + Answer);
+				  document.write ("Op deze vraag : " + Question + " gaf je dit antwoord : " + Answer + "<div>");
 				}
 		
 			 function ShowCookie() {
@@ -40,7 +40,7 @@
 </label>
 	
 <div>
-
+<a href="q4.html"><img src="images/prev.png" width="400" height="150" alt=""></a>
 </div>
 
 </form>
