--- a/q3.html
+++ b/q3.html
@@ -9,7 +9,7 @@
         
             function WriteCookie() {
 			   Answer3Result = escape(document.quiz.day.value) + ";"; 
-               document.cookie = "Answer3=" + Answer3Result + "path=/";
+               document.cookie = "Vraag3=" + Answer3Result + "path=/";
 			   document.forms["quiz"].submit();
             }
 			 
