--- a/index.html
+++ b/index.html
@@ -30,35 +30,35 @@
 	<tbody>
 		<tr>
 			<td><label>
-  <input type="radio" name="hats" value="green" checked>
+  <input type="radio" name="hats" value="Creatief" checked>
   <img src="images/__green.png" width="300" height="225">
 				<h1>Creatief</h1>
 </label></td>
 			<td><label>
-  <input type="radio" name="hats" value="blue" checked>
+  <input type="radio" name="hats" value="Beschouwend" checked>
   <img src="images/__blue.png" width="300" height="225">
 				<h1>Beschouwend</h1>
 </label></td>
 			<td><label>
-  <input type="radio" name="hats" value="yellow" checked>
+  <input type="radio" name="hats" value="Positief" checked>
   <img src="images/__yellow.png" width="300" height="225">
 				<h1>Positief</h1>
 </label></td>
 		</tr>
 		<tr>
 			<td><label>
-  <input type="radio" name="hats" value="red" checked>
+  <input type="radio" name="hats" value="Op_gevoel" checked>
   <img src="images/__red.png" width="300" height="225">
 				<h1>Op gevoel</h1>
 </label>
 </td>
 			<td><label>
-  <input type="radio" name="hats" value="white" checked>
+  <input type="radio" name="hats" value="Feitelijk" checked>
   <img src="images/__white.png" width="300" height="225">
 				<h1>Feitelijk</h1>
 </label></td>
 			<td><label>
-  <input type="radio" name="hats" value="black" checked>
+  <input type="radio" name="hats" value="Negatief" checked>
   <img src="images/__black.png" width="300" height="225">
 				<h1>Negatief</h1>
 </label></td>
