--- a/q2.html
+++ b/q2.html
@@ -66,32 +66,32 @@
 		</tr>
 		<tr>
 			<td><label>
-  <input type="radio" name="archetypes" value="7" checked>
+  <input type="radio" name="archetypes" value="Tovenaar" checked>
   <img src="images/__tovenaar.png" width="125" height="150">
 				<h2>Tovenaar</h2>
 </label></td>
 			<td><label>
-  <input type="radio" name="archetypes" value="8" checked>
+  <input type="radio" name="archetypes" value="Verzorger" checked>
   <img src="images/__voeder.png" width="125" height="150">
 				<h2>Verzorger</h2>
 </label></td>
 			<td><label>
-  <input type="radio" name="archetypes" value="9" checked>
+  <input type="radio" name="archetypes" value="Provocateur" checked>
   <img src="images/__vrijbuiter.png" width="125" height="150">
 				<h2>Provocateur</h2>
 			</label></td>
 			<td><label>
-  <input type="radio" name="archetypes" value="10" checked>
+  <input type="radio" name="archetypes" value="Wijze" checked>
   <img src="images/__wijze.png" width="125" height="150">
 				<h2>Wijze</h2>
 </label></td>
 			<td><label>
-  <input type="radio" name="archetypes" value="11" checked>
+  <input type="radio" name="archetypes" value="Alleman" checked>
   <img src="images/__alleman.png" width="125" height="150">
 				<h2>Alleman</h2>
 </label></td>
 			<td><label>
-  <input type="radio" name="archetypes" value="12" checked>
+  <input type="radio" name="archetypes" value="Avonturier" checked>
   <img src="images/__avonturier.png" width="125" height="150">
 				<h2>Avonturier</h2>
 </label></td>
