--- a/q3.html
+++ b/q3.html
@@ -27,12 +27,12 @@
 <form action="q4.html" name = "quiz">
 
 <label>
-  <input type="radio" name="day" value="ja" checked>
+  <input type="radio" name="day" value="Ja" checked>
   <img src="images/__ja.png" width="400" height="400">
 </label>
 
 <label>
-  <input type="radio" name="day" value="nee" checked>
+  <input type="radio" name="day" value="Nee" checked>
   <img src="images/__nee.png" width="400" height="400">
 </label>
 	
