--- a/q4.html
+++ b/q4.html
@@ -30,24 +30,24 @@
 <tbody>
 <tr>
 <td><label>
-  <input type="radio" name="daycolor" value="Warm Grasgroen" checked>
+  <input type="radio" name="daycolor" value="Warm_Grasgroen" checked>
   <img src="images/__gras.png" width="350" height="350">
 	<h2>Warm Grasgroen: Zorgzaam en Ontspannen óf Passief en Afwachtend</h2>
 </label></td>
 <td><label>
-  <input type="radio" name="daycolor" value="Helder Koningsblauw" checked>
+  <input type="radio" name="daycolor" value="Helder_Koningsblauw" checked>
   <img src="images/__koninglijk.png" width="350" height="350">
 	<h2>Helder Koningsblauw: Nauwkeurig en Gedetailleerd óf Besluiteloos en Argwanend</h2>
 </label></td>
 </tr>
 <tr>
 <td><label>
-  <input type="radio" name="daycolor" value="Stralend Goudgeel" checked>
+  <input type="radio" name="daycolor" value="Stralend_Goudgeel" checked>
   <img src="images/__zonnig.png" width="350" height="350">
 	<h2>Stralend Goudgeel: Enthousiast en Expressief óf Chaotisch en Pronkerig</h2>
 </label></td>
 <td><label>
-  <input type="radio" name="daycolor" value="Vurig Oranje" checked>
+  <input type="radio" name="daycolor" value="Vurig_Oranje" checked>
   <img src="images/__vurig.png" width="350" height="350">
 	<h2>Vurig Oranje: Wilskrachtig en Vastberaden óf Agressief en Controlerend</h2>
 </label>	</td>
