--- a/q5.html
+++ b/q5.html
@@ -30,56 +30,56 @@
 <tbody>
 <tr>
 <td><label>
-  <input type="radio" name="challenges" value="Open, Toegankelijk, Eerlijk" checked>
+  <input type="radio" name="challenges" value="Open,_Toegankelijk,_Eerlijk" checked>
   <img src="images/__open-toegankelijk-eerlijk.png" width="160" height="125">
 	<h2>Open, Toegankelijk, Eerlijk</h2>
 </label></td>
 <td><label>
-  <input type="radio" name="challenges" value="Bij jezelf blijven, Reflecteren" checked>
+  <input type="radio" name="challenges" value="Bij_jezelf_blijven,_Reflecteren" checked>
   <img src="images/__bijjezelfblijven-reflecteren.png" width="160" height="125">
 	<h2>Bij jezelf blijven, Reflecteren</h2>
 </label></td>
 <td><label>
-  <input type="radio" name="challenges" value="Oordeelloos, Empathisch" checked>
+  <input type="radio" name="challenges" value="Oordeelloos,_Empathisch" checked>
   <img src="images/__oordeelloos-empatisch-respectvol.png" width="160" height="125">
 	<h2>Oordeelloos, Empathisch</h2>
 </label></td>
 <td><label>
-  <input type="radio" name="challenges" value="Bewust van anderen" checked>
+  <input type="radio" name="challenges" value="Bewust_van_anderen" checked>
   <img src="images/__bewust-wakker.png" width="160" height="125">
 	<h2>Bewust van anderen</h2>
 </label>
 </td>
 <td><label>
-  <input type="radio" name="challenges" value="Overgave, Bescheiden, Bereidwillig" checked>
+  <input type="radio" name="challenges" value="Overgave,_Bescheiden,_Bereidwillig" checked>
   <img src="images/__overgave-bescheiden.png" width="160" height="125">
 	<h2>Overgave, Bescheiden, Bereidwillig</h2>
 </label></td>
 </tr>
 <tr>
 <td><label>
-  <input type="radio" name="challenges" value="Nieuwe dingen proberen" checked>
+  <input type="radio" name="challenges" value="Nieuwe_dingen_proberen" checked>
   <img src="images/__nieuwedingenproberen-moedig.png" width="160" height="125">
 	<h2>Nieuwe dingen proberen</h2>
 </label></td>
 <td><label>
-  <input type="radio" name="challenges" value="Leergierig, Flexibel, Geduldig" checked>
+  <input type="radio" name="challenges" value="Leergierig,_Flexibel,_Geduldig" checked>
   <img src="images/__leergierig-flexibel-geduldig.png" width="160" height="125">
 	<h2>Leergierig, Flexibel, Geduldig</h2>
 </label></td>
 <td><label>
-  <input type="radio" name="challenges" value="Efficiënt, Geördend" checked>
+  <input type="radio" name="challenges" value="Efficiënt,_Geördend" checked>
   <img src="images/__efficient-structuur-geordend.png" width="160" height="125">
 	<h2>Efficïent, Gestructureerd, Geordend</h2>
 </label></td>
 <td><label>
-  <input type="radio" name="challenges" value="Betrokken, Verbindend" checked>
+  <input type="radio" name="challenges" value="Betrokken,_Verbindend" checked>
   <img src="images/__betrokken-verbindend-hulpvaardig.png" width="160" height="125">
 	<h2>Betrokken, Verbindend</h2>
 </label></td>
 <td>	
 <label>
-  <input type="radio" name="challenges" value="Autonoom, Zichtbaar zijn" checked>
+  <input type="radio" name="challenges" value="Autonoom,_Zichtbaar_zijn" checked>
   <img src="images/__autonoom-zichtbaar.png" width="160" height="125">
 	<h2>Autonoom, Zichtbaar zijn</h2>
 </label></td>
