--- a/q6.html
+++ b/q6.html
@@ -28,6 +28,8 @@
 			 
       	</script>   
 	</h2>
+	
+	<h2>Wil je meer te weten komen over wat dit betekent? Probeer de uitgebreide versie van de test met professionele begeleiding!</h2>
 
 	
 <form action="q5.html" name = "quiz">
